--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "wiredep": "^2.2.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "http-server -p 8080"
   },
   "author": "NetanelBasal",
   "homepage": ""
