--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "wiredep": "^2.2.2"
   },
   "scripts": {
-    "start": "http-server -p 80"
+    "start": "bower install && http-server -p 8080"
   },
   "author": "NetanelBasal",
   "homepage": ""
